--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,7 @@
 name: Release new version
-run-name: ${{ github.event.pusher.username }} is publising ${{ github.ref_name }}
+run-name: Publising version ${{ github.ref_name }} ${{ github.event.ref }}
 on:
   push:
-    branches: [master]
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
 env:
@@ -19,7 +18,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      
+
       - name: Setup Dart
         uses: dart-lang/setup-dart@v1
 
