--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -14,3 +14,4 @@ jobs:
       - run: echo "rer_name=${{ github.ref_name }}"
       - run: echo "sender.name=${{ github.event.sender.name }}"
       - run: echo "${{ github.event.base_ref }}"
+      - run: echo "${{ github.base_ref }}"
