--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -14,6 +14,7 @@ jobs:
       - run: echo "rer_name=${{ github.ref_name }}"
       - run: echo "sender.name=${{ github.event.sender.name }}"
       - run: echo "${{ github.event.base_ref }}"
+      - run: echo "${{ github.event.ref }}"
       - run: echo "${{ github.base_ref }}"
       - run: echo $GITHUB_REF
       - run: BRANCH_NAME=${GITHUB_REF#refs/heads/} && echo $BRANCH_NAME
