--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -17,3 +17,4 @@ jobs:
       - run: echo "${{ github.base_ref }}"
       - run: echo $GITHUB_REF
       - run: BRANCH_NAME=${GITHUB_REF#refs/heads/} && echo $BRANCH_NAME
+      - run: echo "by ${{ github.event.head_commit.author }}"
