--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Build web app
         working-directory: ${{ env.example_dir }}
-        run: flutter build web
+        run: flutter build web --release --base-href "/${{ github.event.repository.name }}/"
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
