--- a/.github/workflows/release_validation.yml
+++ b/.github/workflows/release_validation.yml
@@ -9,7 +9,7 @@ env:
 jobs:
   validation:
     name: Release validation
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
