--- a/.github/workflows/release_validation.yml
+++ b/.github/workflows/release_validation.yml
@@ -1,5 +1,5 @@
 name: Release Validation
-run-name: ${{ github.event.pull_request.title }}
+run-name: Validation for ${{ github.event.pull_request.title }}
 on:
   pull_request:
     branches: [master]
@@ -9,7 +9,7 @@ env:
 jobs:
   validation:
     name: Release validation
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
