--- a/.github/workflows/release_tag.yml
+++ b/.github/workflows/release_tag.yml
@@ -15,6 +15,9 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        
       - name: Get latest release tag
         id: previous_tag
         uses: WyriHaximus/github-action-get-previous-tag@v1
