--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,16 @@
 name: Release new version
 run-name: ${{ github.ref_name }} published by ${{ github.event.head_commit.author.name }}
 on:
-  push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+*"
+  workflow_run:
+    workflows: ['Create Release Tag']
+    types: ['completed']
 env:
   package_dir: ./
   example_dir: ./example
 jobs:
   publish:
     name: Publish the package to pub.dev
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       id-token: write
     runs-on: ubuntu-latest
